# EasyHamLog

./: .gitignore  CMakeLists.txt  Readme.md  WinBuild32.bat  WinBuild64.bat  installer_linux.sh
forms/: mainuiapplication.cpp  mainuiapplication.h  mainuiapplication.ui  map.qml  prefixlookupdialog.cpp  prefixlookupdialog.h  qsoadddialog.cpp  qsoadddialog.h  qsoadddialog.ui  qsomap.ui
forms/AboutEasyHamLog/: AboutEasyHamlog.cpp  AboutEasyHamlog.h  AboutEasyHamlog.ui
forms/AboutMe/: AboutMeDialog.cpp  AboutMeDialog.h  AboutMeDialog.ui
forms/LoginQRZ/: LoginQRZ.cpp  LoginQRZ.h  LoginQRZ.ui
forms/MainUIApplication/: mainuiapplication.cpp  mainuiapplication.h  mainuiapplication.ui
forms/PreferencesDialog/: PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui
forms/PrefixLookupDialog/: prefixlookupdialog.cpp  prefixlookupdialog.h  prefixlookupdialog.ui
forms/QSOAddDialog/: qsoadddialog.cpp  qsoadddialog.h  qsoadddialog.ui
forms/QSOMap/: marker.qml  qsomap.cpp  qsomap.h
include/: ADIInterface.h  CallsignLookup.h  QRZInterface.h  QSO.h  QSODatabaseInterface.h  UiInterface.h
installer/config/: config.xml
interface/: qrz_interface.py
src/: ADIInterface.cpp  CallsignLookup.cpp  QRZInterface.cpp  QSODatabaseInterface.cpp  UiInterface.cpp  main.cpp
tools/: make_prefix.py  prefix_list.txt  prefix_lookup.xml  prefix_xml.xml
